--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -13,12 +13,12 @@
   <img class="uk-border-circle avatar" src="{{ domain }}{{ author.avatar }}" alt="{{ author.name }}">
 {% endif %} -->
 
-<div>
-  <!-- {% if author.name %}
+<!-- <div>
+  {% if author.name %}
     {{ site.data.translation[site.lang].written_by | default: "Written by" }} <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ author.name }}</span></span><br>
-  {% endif %} -->
+  {% endif %}
   <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
     {% assign date_format = site.date_format | default: "%Y-%m-%d" %}
     Last updated: {{ page.date | date: date_format }}
   </time>
-</div>
+</div> -->
