--- a/_includes/social-networks.html
+++ b/_includes/social-networks.html
@@ -60,7 +60,7 @@
 {% endif %}
 {% if site.social.email %}
 <div>
-    <a href="{{ site.social.email }}" data-uk-icon="icon: mail" class="uk-icon-link uk-icon" target="_blank"></a>
+    <a href="mailto:{{ site.social.email }}" data-uk-icon="icon: mail" class="uk-icon-link uk-icon" target="_blank"></a>
 </div>
 {% endif %}
 {% if site.social.website %}
