update homepage icons and stablecoin pages

--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -40,9 +40,11 @@ layout: default
                             <div>
                                 <special id="{{ page.category }}"></special>
                                 <div id="chainSelector"></div><br>
+                                <div id="auditSelector"></div><br>
                                 <div id="linksGenerationArea"></div>
                             </div>
                             {% else %}
+                            <h3>{{ page.section1title }}</h3>
                             <div>
                                 <special id="{{ page.category }}"></special>
                                 <div id="chainSelector"></div><br>
