--- a/_sass/uikit/variables-theme.scss
+++ b/_sass/uikit/variables-theme.scss
@@ -250,7 +250,7 @@ $card-title-font-size: $global-large-font-size !default;
 $card-title-line-height: 1.4 !default;
 $card-badge-top: $global-gutter !default;
 $card-badge-right: $card-badge-top !default;
-$card-hover-background: $global-background !default;
+$card-hover-background: $global-secondary-background !default;
 $card-default-background: $global-background !default;
 $card-default-color: $global-color !default;
 $card-default-title-color: $global-emphasis-color !default;
@@ -258,7 +258,7 @@ $card-default-hover-background: $card-default-background !default;
 $card-primary-background: $global-primary-background !default;
 $card-primary-color: $global-inverse-color !default;
 $card-primary-title-color: $card-primary-color !default;
-$card-primary-hover-background: $card-primary-background !default;
+$card-primary-hover-background: $global-secondary-background !default;
 $card-primary-color-mode: light !default;
 $card-secondary-background: $global-secondary-background !default;
 $card-secondary-color: $global-inverse-color !default;
