--- a/_sass/uikit/variables.scss
+++ b/_sass/uikit/variables.scss
@@ -249,11 +249,11 @@ $card-title-font-size: $global-large-font-size !default;
 $card-title-line-height: 1.4 !default;
 $card-badge-top: $global-gutter !default;
 $card-badge-right: $card-badge-top !default;
-$card-hover-background: $global-muted-background !default;
+$card-hover-background: $global-secondary-background !default;
 $card-default-background: $global-muted-background !default;
 $card-default-color: $global-color !default;
 $card-default-title-color: $global-emphasis-color !default;
-$card-default-hover-background: darken($card-default-background, 5%) !default;
+$card-default-hover-background: $global-secondary-background !default;
 $card-primary-background: $global-primary-background !default;
 $card-primary-color: $global-inverse-color !default;
 $card-primary-title-color: $card-primary-color !default;
