--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
 
     {% include hook-pre-closing-body.html %}
 
+    <!-- 100% privacy friendly analytics -->
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+
     </body>
 
 </html>
